# docs-service

./: .pre-commit-config.yaml  404.html  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-documentation.yaml
docs/service/: 0-all.md  1-auth.md  2-set.md  3-pay.md  7-doc.md  8-per.md  9-con.md  9-conv.md  a.md
docs/service/images/: Share-Chat-overview.mmd  chatbot-grpc.mmd  conversation-and-chatbot-overview.mmd  document-overview.mmd  payment-kafka-event.mmd
docs/service/temp/: 0.mmd  00x.mmd
python/: sync_json_to_md.py
search/: search_index.json
service/0-all/: index.html
service/1-auth/: index.html
service/2-set/: index.html
service/3-pay/: index.html
service/7-doc/: index.html
service/8-per/: index.html
service/9-con/: index.html
